--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8">
+        <title> Ashly's Programming Portfolio</title>
+    </head>
+    <body>
 
-<h1>Welcome to my web page! </h1>
-Thanks for vising.
+        <table width="800px">
+            <tr>
+                <td><img src="banner.jpg">
+                <a href="about.html"><img src="About me Button.png"></a></td>
+                <td><img src="Javascripts Button.png"></td>
+                <img src="Home button.png">
+            </tr>
+        </table>
 
+    </body>
 </html>
