--- a/index.html
+++ b/index.html
@@ -4,16 +4,9 @@
         <meta charset="utf-8">
         <title> Ashly's Programming Portfolio</title>
     </head>
+    
     <body>
-
-        <table width="800px">
-            <tr>
-                <td><img src="banner.jpg">
-                <a href="about.html"><img src="About me Button.png"></a></td>
-                <td><img src="Javascripts Button.png"></td>
-                <img src="Home button.png">
-            </tr>
-        </table>
-
+        <img src="banner.jpg">
     </body>
+
 </html>
