--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     
     <body>
         <img src="images/banner.jpg">
+        <table width="800px" align="center">
+
+            <tr>
+                <td align="center"><a href="about.html"><img src="images/about.png"></a></td>
+
+                <td align="center"><a href="java.html"><img src="images/java.png"></a></td>
+
+                <td align="center"><a href="index.html"><img src="images/home.png"></a></td>
+            </tr>
+
+        </table>
+
+        <h1>Welcome to my page!</h1>
+
+        <p> My name is Ashly Martinez Rodriguez and I am from Dominican Republic. You can click the <br>
+             "About me" button to learn more about me. This website is going to be a portafalio for <br>
+             incoming JavaScript projects in CSC106. I have taken web development and coding classes in <br>
+             the past so the material in class is familiar to me. I still believe that my technical skills <br>
+            could be still use some work. I am very excited to create my own games in the future! <br></p>
     </body>
 
 </html>
