--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     
     <body>
-        <img src="images/banner.jpg">
+        <img src="images/banner.jpg" width="1520px" height="350">
         <table width="800px" align="center">
 
             <tr>
@@ -19,9 +19,9 @@
 
         </table>
 
-        <h1>Welcome to my page!</h1>
+        <h1 align="center"> Welcome to my page!</h1>
 
-        <p> My name is Ashly Martinez Rodriguez and I am from Dominican Republic. You can click the <br>
+        <p align="center"> My name is Ashly Martinez Rodriguez and I am from Dominican Republic. You can click the <br>
              "About me" button to learn more about me. This website is going to be a portafalio for <br>
              incoming JavaScript projects in CSC106. I have taken web development and coding classes in <br>
              the past so the material in class is familiar to me. I still believe that my technical skills <br>
