--- a/java.html
+++ b/java.html
@@ -30,6 +30,39 @@ body {
 
 </style>
     
+<h1>Ashly's JavaScript Programs</h1>
+
+<p> This page contains JavaScripts apps that I have written in my CSC106 course at the University of Rhode Island using tools from <a href="https://www.khanacademy.org/profile/me/">Khan Academy</a> </p>
+
+
+<center>
+   
+    </center>
+<table width="800px" align="center">
+
+    <tr>
+        <td align="center">
+            <h1>Bitmoji</h1> 
+            <p>Look at the bitmoji that I created of myself!</p> 
+            <a href="https://www.khanacademy.org/computer-programming/mr_bitmoji/6432080685875200"></a><script src="https://www.khanacademy.org/computer-programming/mr_bitmoji/6432080685875200/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></a>
+        </td>
+
+        <td align="center">
+            <h1>Dancing Bitmoji</h1>
+            <p>Bitmoji that spawns in different places when you refresh the page</p>
+            <a href="https://www.khanacademy.org/computer-programming/mr_dancing_bitmoji/5543638850519040"></a></h2><script src="https://www.khanacademy.org/computer-programming/mr_dancing_bitmoji/5543638850519040/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        </td>
+
+        <td align="center">
+            <h1>Racing Bitmoji</h1>
+            <p>Watch this race between a bunny and my biemoji! Refresh for different speeds!</p>
+            <a href="https://www.khanacademy.org/computer-programming/mr_racingbitmoji/6252997863718912"></a><script src="https://www.khanacademy.org/computer-programming/mr_racingbitmoji/6252997863718912/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        </td>
+    </tr>
+
+</table>
+
+
 </body>
 
 </html>
