--- a/java.html
+++ b/java.html
@@ -56,7 +56,7 @@ body {
         <td align="center">
             <h1>Racing Bitmoji</h1>
             <p>Watch this race between a bunny and my biemoji! Refresh for different speeds!</p>
-            <a href="https://www.khanacademy.org/computer-programming/mr_racingbitmoji/6252997863718912"></a><script src="https://www.khanacademy.org/computer-programming/mr_racingbitmoji/6252997863718912/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+            <h2><a href="https://www.khanacademy.org/computer-programming/mr_racingbitmojifun/5072611523608576"></a></h2><script src="https://www.khanacademy.org/computer-programming/mr_racingbitmojifun/5072611523608576/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"></a>
         </td>
     </tr>
 
