--- a/java.html
+++ b/java.html
@@ -50,13 +50,13 @@ body {
         <td align="center">
             <h1>Dancing Bitmoji</h1>
             <p>Bitmoji that spawns in different places when you refresh the page</p>
-            <a href="https://www.khanacademy.org/computer-programming/mr_dancing_bitmoji/5543638850519040"></a></h2><script src="https://www.khanacademy.org/computer-programming/mr_dancing_bitmoji/5543638850519040/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+            <a href="https://www.khanacademy.org/computer-programming/mr_dancefloor/6339882637770752"></a><script src="https://www.khanacademy.org/computer-programming/mr_dancefloor/6339882637770752/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"></a>
         </td>
 
         <td align="center">
             <h1>Racing Bitmoji</h1>
             <p>Watch this race between a bunny and my biemoji! Refresh for different speeds!</p>
-            <h2><a href="https://www.khanacademy.org/computer-programming/mr_racingbitmojifun/5072611523608576"></a></h2><script src="https://www.khanacademy.org/computer-programming/mr_racingbitmojifun/5072611523608576/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"></a>
+            <a href="https://www.khanacademy.org/computer-programming/mr_racingbitmojifun/5072611523608576"></a><script src="https://www.khanacademy.org/computer-programming/mr_racingbitmojifun/5072611523608576/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"></a>
         </td>
     </tr>
 
