--- a/java.html
+++ b/java.html
@@ -61,7 +61,7 @@ body {
 
         <td align = "center">
             <h1> Tag Game</h1>
-            <p>Click on the bitmoJi and watch it dissapear</p>
+            <p>Click on the bitMoji and watch it dissapear!</p>
             <a href="https://www.khanacademy.org/computer-programming/part-3-programming-with-arrays/4988558302167040"></a><script src="https://www.khanacademy.org/computer-programming/part-3-programming-with-arrays/4988558302167040/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"></a>
         </td>
     </tr>
