--- a/java.html
+++ b/java.html
@@ -58,11 +58,17 @@ body {
             <p>Watch this race between a bunny and my biemoji! Refresh for different speeds!</p>
             <a href="https://www.khanacademy.org/computer-programming/mr_racingbitmojifun/5072611523608576"></a><script src="https://www.khanacademy.org/computer-programming/mr_racingbitmojifun/5072611523608576/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"></a>
         </td>
-
-        <td align = "center">
+    </tr>
+    <tr>
+        <td align="center">
             <h1> Tag Game</h1>
             <p>Click on the bitMoji and watch it dissapear!</p>
             <a href="https://www.khanacademy.org/computer-programming/part-3-programming-with-arrays/4988558302167040"></a><script src="https://www.khanacademy.org/computer-programming/part-3-programming-with-arrays/4988558302167040/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"></a>
+        </td>
+        <td align="center">
+            <h1> Contact App</h1>
+            <p> Take a look at my contact list! Click each contact name to show more</p>
+            <a href="https://www.khanacademy.org/computer-programming/week-8-coding-assignment/4558572376211456"></a><script src="https://www.khanacademy.org/computer-programming/week-8-coding-assignment/4558572376211456/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"></a>"
         </td>
     </tr>
 
