--- a/java.html
+++ b/java.html
@@ -68,7 +68,7 @@ body {
         <td align="center">
             <h1> Contact App</h1>
             <p> Take a look at my contact list! Click each contact name to show more</p>
-            <a href="https://www.khanacademy.org/computer-programming/week-8-coding-assignment/4558572376211456"></a><script src="https://www.khanacademy.org/computer-programming/week-8-coding-assignment/4558572376211456/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"></a>"
+            <a href="https://www.khanacademy.org/computer-programming/week-8-coding-assignment/4558572376211456"></a><script src="https://www.khanacademy.org/computer-programming/week-8-coding-assignment/4558572376211456/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"></a>
         </td>
     </tr>
 
