--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
 
             <tr>
                 <td align="center"><a href="about.html"><img src="images/about.png.jpg"></a></td>
-
                 <td align="center"><a href="java.html"><img src="images/javascripts.png.jpg"></a></td>
-
                 <td align="center"><a href="index.html"><img src="images/home.png.jpg"></a></td>
+                <td align="center"><a href="BitGame.html"><img src="images/BitGame button.png"></a></td>
+
             </tr>
 
         </table>
