--- a/BitGame.html
+++ b/BitGame.html
@@ -17,7 +17,7 @@
                 <td align="center"><a href="about.html"><img src="images/about.png.jpg"></a></td>
                 <td align="center"><a href="java.html"><img src="images/javascripts.png.jpg"></a></td>
                 <td align="center"><a href="index.html"><img src="images/home.png.jpg"></a></td>
-                <td align="center"><a href="BitGame.html"><img src="images/BitGame button.png"></a></td>
+                <td align="center"><a href="BitGame.html"><img src="images/Final Project button.jpg"></a></td>
 
             </tr>
         </table>
@@ -32,6 +32,29 @@ body {
 <h1>Find Our Bitmojis!</h1>
 
 <p> By Ashly MR and Abby Civiello using <a href="https://www.khanacademy.org/profile/me/">Khan Academy</a> </p>
+
+<p> Finding My Bitmoji is an inspiration from the Finding Waldo game. My partner Abby <br> 
+    and I thought that it would be a nice little game with a ten-second timer that resets each level.<br>
+    There are five levels and the difficulty level increases as you go on. The scoring works <br>
+    how fast the user finds and clicks on the Bitmoji found. The highest score that you can <br> 
+    get is 50! Can you reach it?<br>
+</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/QIfBqQa-0GY?si=1tJJ-NQyqS-m5Y19" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<h2 align="LEFT">
+    <ol>
+    
+    <li>In the start screen make sure you memorize how Abby’s and Ashly’s Bitmoji looks</li>
+    <li>Once you’re done click the start button and click on the Bitmoji you find</li>
+    <li>Keep in mind that there’s a ten-second timer! If you don’t click or find the Bitmoji within then seconds you automatically lose. But, don't worry you can always try again! You have unlimited tries</li>
+    <li>Have fun!</li>
+
+    </ol>
+   
+</h2>
+
+<h1>Play Here:</h1>
 
     <a href="https://www.khanacademy.org/computer-programming/last-final-version/4903571700760576"></a>
         <script src="https://www.khanacademy.org/computer-programming/last-final-version/4903571700760576/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
