--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <td align="center"><a href="about.html"><img src="images/about.png.jpg"></a></td>
                 <td align="center"><a href="java.html"><img src="images/javascripts.png.jpg"></a></td>
                 <td align="center"><a href="index.html"><img src="images/home.png.jpg"></a></td>
-                <td align="center"><a href="BitGame.html"><img src="images/BitGame button.png"></a></td>
+                <td align="center"><a href="BitGame.html"><img src="images/Final Project button.jpg"></a></td>
 
             </tr>
 
@@ -39,6 +39,8 @@
              incoming JavaScript projects in CSC106. I have taken web development and coding classes in <br>
              the past so the material in class is familiar to me. I still believe that my technical skills <br>
             could be still use some work. I am very excited to create my own games in the future! <br></p>
+
+            
     </body>
 
 </html>
