--- a/java.html
+++ b/java.html
@@ -17,7 +17,7 @@
                 <td align="center"><a href="about.html"><img src="images/about.png.jpg"></a></td>
                 <td align="center"><a href="java.html"><img src="images/javascripts.png.jpg"></a></td>
                 <td align="center"><a href="index.html"><img src="images/home.png.jpg"></a></td>
-                <td align="center"><a href="BitGame.html"><img src="images/BitGame button.png"></a></td>
+                <td align="center"><a href="BitGame.html"><img src="images/Final Project button.jpg"></a></td>
 
             </tr>
 
